--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <script>
     // --- CONFIGURAÇÃO ---
-    const API_URL = "https://spokely-backend-1.onrender.com; // URL do seu Backend
+    const API_URL = "https://spokely-backend-1.onrender.com"; // URL do seu Backend
     
     // ⚠️ SUBSTITUA PELO ID DO SEU USUÁRIO NO SUPABASE (User UID)
     const userId = "81d8e5b7-edb2-4227-9fb2-8d4863b51414"; 
