--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 <script>
     const API_URL = "https://spokely-backend-1.onrender.com"; // SEU BACKEND
     
-    // ⚠️ COLOQUE SEU ID AQUI
-    const userId = "COLE_SEU_UUID_AQUI"; 
+    // ⚠️ COLOQUE SEU ID AQUI (Ex: "5f4d3...")
+    const userId = "81d8e5b7-edb2-4227-9fb2-8d4863b51414"; 
 
     // Elementos
     const lvlDisplay = document.getElementById('lvlDisplay');
