--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     const API_URL = "https://spokely-backend-1.onrender.com"; // SEU BACKEND
     
     // ⚠️ SUBSTITUA PELO SEU ID
-    const userId = "COLE_SEU_UUID_AQUI"; 
+    const userId = "81d8e5b7-edb2-4227-9fb2-8d4863b51414"; 
 
     // Perguntas (MVP)
     const questionBank = {
