--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spokely - Perfil</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id="loading">CARREGANDO...</div>
@@ -51,7 +51,9 @@
         </a>
     </nav>
 
-    <script src="script.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/script.js"></script>
+    
     <script>
         // Carrega dados específicos do perfil
         window.addEventListener('load', async () => {
